<resources>
    <string name="app_name">EcoTravel</string>
    <string name="log">Введите логин</string>
    <string name="log1">Ваш логин</string>
    <string name="log2">Необходимо ввести логин</string>
    <string name="pas">Введите пароль</string>
    <string name="pas1">Ваш пароль</string>
    <string name="pas2">Необходимо ввести пароль</string>
    <string name="lose">Неверный логин и/или пароль</string>
    <string name="win">Все верно</string>
    <string name="enter">Войти</string>
    <string name="title_activity_main">EcoTravel</string>
    <string name="tab_text_1">Новости</string>
    <string name="tab_text_2">Задания</string>
    <string name="tab_text_3">Профиль</string>
    <string name="register">Зарегестрироваться</string>
    <string name="nick">Придумайте себе никнейм</string>
    <string name="nick1">Никнейм</string>
    <string name="password">Придумайте себе пароль</string>
    <string name="password1">Пароль</string>
    <string name="rightregister1">Вы успешно зарегестрировались</string>
    <string name="header_news">Заголовок</string>
    <string name="disc_news">Описание (текст) новости</string>
    <string name="post">Опубликовать</string>
    <string name="reservq">Вы уверены, что хотите забронировать задание для выполнения?</string>
    <string name="answeryes">Да</string>
    <string name="answerno">Нет</string>
    <string name="titledialog">Предупреждение</string>
    <string name="success">Вы успешно забронировали задание</string>
    <string name="free">Свободно</string>
    <string name="reserv">Забронировано</string>
    <string name="address_task">Адрес</string>
    <string name="disc_task">Описание (текст) задания</string>
    <string name="price">Награда</string>
    <string name="photo">Прикрепите фото выполненного задания</string>
    <string name="photo1">Послать на проверку</string>
    <string name="photo2">Выбрать фотографию</string>
    <string name="done">Пользователь</string>
    <string name="done1">Выполнил задание</string>
    <string name="check">Вы подтверждаете выполнения данного задания данным пользователем?</string>
    <string name="check1">Задание одобрено</string>
    <string name="admin">Администратор</string>
    <string name="user">Пользователь</string>
    <string name="must_address">Необходимо ввести адрес</string>
    <string name="must_disc">Необходимо ввести описание</string>
    <string name="must_price">Необходимо ввести цену</string>
    <string name="must_price_numbers">Цена должна быть представлена числом</string>
    <string name="must_header">Необходимо ввести заголовок</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>