<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log"
            android:textSize="@dimen/text_size" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/log1"
            android:inputType="text"
            android:textSize="@dimen/text_size"
            android:id="@+id/login"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/pas"
            android:textSize="@dimen/text_size" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pas1"
            android:textSize="@dimen/text_size"
            android:inputType="text"
            android:id="@+id/password"
            android:password="true"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/enter"
            android:id="@+id/enter"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/register"
            android:id="@+id/register"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>