<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterActivity">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:text="@string/nick"
            android:textSize="@dimen/text_size" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nick1"
            android:inputType="text"
            android:textSize="@dimen/text_size"
            android:id="@+id/nick"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/text_size" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password1"
            android:textSize="@dimen/text_size"
            android:inputType="text"
            android:id="@+id/password"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/register"
            android:id="@+id/register"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>