<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewsActivity">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:text="@string/address_task"
            android:textSize="@dimen/text_size" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_task"
            android:inputType="text"
            android:textSize="@dimen/text_size"
            android:id="@+id/address"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disc_task"
            android:textSize="@dimen/text_size" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/disc_task"
            android:textSize="@dimen/text_size"
            android:inputType="text"
            android:id="@+id/disc_task"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="@dimen/text_size" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:textSize="@dimen/text_size"
            android:inputType="text"
            android:id="@+id/price"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/post"
            android:id="@+id/post_task"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>