<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewsActivity">
    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:ignore="MissingConstraints">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        


        <TextView
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:textSize="@dimen/text_size" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/photo2"
            android:id="@+id/choose_photo"/>

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/photo"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/photo1"
            android:id="@+id/post_photo"/>
        

    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>